@@ -107,7 +107,7 @@ There are two types of communication - requests and push-services.
 JSON requests are synchronous requests. A valid request results in an response.
 
 ### Push-services
-Push services are asynchronous responses from the server. They can be subscribed and unsubscribed trough synchron request. The push service will send JSON responses until it's unsubscribed by a JSON request to the server, by the respective client.
+Push services are asynchronous responses from the server. They can be subscribed and unsubscribed through synchron request. The push service will send JSON responses until it's unsubscribed by a JSON request to the server, by the respective client.
 
 If subscribed trough an synchronous JSON requests, push services are pushed dependent on there configured interval, to the subscribed clients. Internally they are run in an own thread. That means, the service messages are pushed independently from the server. One push service (thread) can manage multiple clients, that are subscribed to him.
 
@@ -130,21 +130,7 @@ JSON requests to the libjapi always start with the JSON key \a japi_request foll
 
 A missing \a japi_request key in a JSON request will result in errors. The JSON keys in \a args are additional values the request needs for processing. It's the same for self-defined request-functions; the needed keys are defined by the functions. See \ref clientExample "here" for detailed examples.
 
-### Response format
-All requests return a response. The reponse format begins always with the JSON key \a japi_response followed by the request, that returned the response:
-\code
-{
-  "japi_response": "<request_name>",
-  "data": {
-  	"<request-specific-return-key-1>": "<request-specific-return-value-1>",
-  	"<request-specific-return-key-n>": "<request-specific-return-value-n>"
-  }
-}
-\endcode
-
-Like the JSON request the keys and values in \a data, are request specific; additional information, like return values of a function.
-
-### Request number
+#### Providing request number
 An optional key `japi_request_no` can be included with each request and will be added to the response accordingly. `japi_request_no` can be any valid JSON value.
 
 \code
@@ -168,6 +154,36 @@ Response including request number:
 {
   "japi_response": "some_request",
   "japi_request_no": "2020-02-20 20:22:20.202"
+}
+\endcode
+
+### Response format
+All requests return a response. The reponse format begins always with the JSON key \a japi_response followed by the request, that returned the response:
+\code
+{
+  "japi_response": "<request_name>",
+  "data": {
+  	"<request-specific-return-key-1>": "<request-specific-return-value-1>",
+  	"<request-specific-return-key-n>": "<request-specific-return-value-n>"
+  }
+}
+\endcode
+
+Like the JSON request the keys and values in \a data, are request specific; additional information, like return values of a function.
+
+#### Response including request arguments
+If configured via `japi_include_args_in_response(ctx, true)`, the response will additionally include the arguments given in the request:
+\code
+{
+  "japi_response": "<request_name>",
+  "args": {
+    "<request-specific-key-1>": "<request-specific-value-1>",
+    "<request-specific-key-n>": "<request-specific-value-n>"
+  },
+  "data": {
+    "<request-specific-return-key-1>": "<request-specific-return-value-1>",
+    "<request-specific-return-key-n>": "<request-specific-return-value-n>"
+  }
 }
 \endcode
 
