@@ -2,6 +2,7 @@ next
 =====
 * Added support to limit the number of concurrent clients
 * Added CMake support
+* Support including request arguments in response via `japi_include_arguments_in_response()`
 
 0.2.0
 =====
